--- a/index.html
+++ b/index.html
@@ -34,16 +34,11 @@
         <section data-background="#E5F3F9">
             <h2>Agenda</h2>
             <ul>
-                <li>Intro</li>
-                <li>CI/CD concepts in detail</li>
-                <ul>
-                    <li>#1 Versioning</li>
-                    <li>#2 Releasing, tagging and publishing</li>
-                    <li>#3 Self contained builds</li>
-                    <li>#4 Standardized process</li>
-                </ul>
-                <li>Live demo</li>
-                <li>Wrap Up</li>
+                <li>What is cypress</li>
+                <li>Why another tool?</li>
+                <li>Drawbacks / Trade-offs</li>
+                <li>Selenium vs. Cypress</li>
+                <li>Demo</li>
             </ul>
         </section>
 
@@ -226,7 +221,7 @@
         <section class="deck-slide" data-background="img/basel1.jpg">
             <h1><span class="image-heading questions">Any questions?</span></h1>
             <h2 class="major"><span class="sub-header">Find the slides: <a href="http://bit.ly/cypress-images">http://bit.ly/cypress-images</a></span></h2>
-            <h2 class="minor"><span class="sub-header">Images from Unsplash: <a href="http://bit.ly/cicd-js-images">http://bit.ly/cicd-js-images</a></span></h2>
+            <h2 class="minor"><span class="sub-header">Images from Unsplash: <a href="http://bit.ly/talk-cypress">http://bit.ly/talk-cypress</a></span></h2>
         </section>
     </div>
 </div>
