--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 
         <section class="deck-slide" data-background="img/basel1.jpg">
             <h1><span class="image-heading questions">Any questions?</span></h1>
-            <h2 class="major"><span class="sub-header">Find the slides: <a href="http://bit.ly/cypress-images">http://bit.ly/cypress-images</a></span></h2>
-            <h2 class="minor"><span class="sub-header">Images from Unsplash: <a href="http://bit.ly/talk-cypress">http://bit.ly/talk-cypress</a></span></h2>
+            <h2 class="major"><span class="sub-header">Find the slides: <a href="http://bit.ly/talk-cypress">http://bit.ly/talk-cypress</a></span></h2>
+            <h2 class="minor"><span class="sub-header">Images from Unsplash: <a href="http://bit.ly/cypress-images">http://bit.ly/cypress-images</a></span></h2>
         </section>
     </div>
 </div>
