--- a/index.html
+++ b/index.html
@@ -189,6 +189,24 @@
                 <h2>Daniel N: <span style="font-style: italic">"Selenium by itself is pretty dumb - you need to write waits"</span></h2>
             </section>
 
+            <section>
+                <h2>Advantages of Selenium</h2>
+                <ul>
+                    <li>Selenium is able to test non browser based apps (only with TAF)</li>
+                    <li>Supports diffrent browsers (Internet Explorer, Chrome, Firefox, Opera, Safari, etc.)</li>
+                    <li>long history, well established, well known</li>
+                    <li>supports many different programming languages</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>important differences</h2>
+                <ul>
+                    <li>selenium operates outside of the brwoser with remote commands in JSON over http (webdriver protccol) -> delay</li>
+                    <li>cypress runs inside the brwoser -> has therefore access to the web app itself and can e.g. stub network requests</li>
+                </ul>
+            </section>
+
             <section></section>
         </section>
 
