--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <li>a tool to test browser based applications</li>
                     <li>developed and maintained by cypress.io - currently about 13 employees</li>
                     <li>and... by the open source community</li>
+                    <li>Is a tool made by developers for developers</li>
                 </ul>
             </section>
         </section>
@@ -70,7 +71,9 @@
                     <li>no <a href="https://github.com/cypress-io/cypress/blob/develop/LICENSE.md">licence</a> costs (MIT): <a href="https://github.com/cypress-io/cypress">open source</a></li>
                     <li>great community (9000 stars, 78 contributors)</li>
                     <li>extremely robust: no need for waits, scrollIntoView, check for visbility, existence... </li>
+                    <li>is close to the browser so it can do things like DOM API stubbing, which selenium can not do</li>
                     <li>very fast test execution (in headless mode)</li>
+                    <li>easy to write tests for frontend developers</li>
                 </ul>
             </section>
 
@@ -188,23 +191,14 @@
             <section>
                 <h2>Daniel N: <span style="font-style: italic">"Selenium by itself is pretty dumb - you need to write waits"</span></h2>
             </section>
-
+            
             <section>
-                <h2>Advantages of Selenium</h2>
-                <ul>
-                    <li>Selenium is able to test non browser based apps (only with TAF)</li>
-                    <li>Supports diffrent browsers (Internet Explorer, Chrome, Firefox, Opera, Safari, etc.)</li>
-                    <li>long history, well established, well known</li>
-                    <li>supports many different programming languages</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>important differences</h2>
-                <ul>
-                    <li>selenium operates outside of the brwoser with remote commands in JSON over http (webdriver protccol) -> delay</li>
-                    <li>cypress runs inside the brwoser -> has therefore access to the web app itself and can e.g. stub network requests</li>
-                </ul>
+               <h2>Advantages of Selenium</h2>
+               <ul>
+                   <li>Selenium is able to test non browser based apps (only with TAF)</li>
+                   <li>Supports diffrent browsers (Internet Explorer, Chrome, Firefox, Opera, Safari, etc.)</li>
+                   <li>Is able to test deployed applications</li>               
+               </ul>
             </section>
 
             <section></section>
