--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             <section>
                 <h2>important differences</h2>
                 <ul>
-                    <li>selenium operates outside of the brwoser with remote commands in JSON over http (webdriver protccol) -> delay</li>
-                    <li>cypress runs inside the brwoser -> has therefore access to the web app itself and can e.g. stub network requests</li>
+                    <li>selenium operates outside of the browser with remote commands in JSON over http (webdriver protccol) -> delay</li>
+                    <li>cypress runs inside the browser -> has therefore access to the web app itself and can e.g. stub network requests</li>
                 </ul>
             </section>
 
