Add review changes

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <li>a tool to test browser based applications</li>
                     <li>developed and maintained by cypress.io - currently about 13 employees</li>
                     <li>and... by the open source community</li>
+                    <li>Is a tool made by developers for developers</li>
                 </ul>
             </section>
         </section>
@@ -70,7 +71,9 @@
                     <li>no <a href="https://github.com/cypress-io/cypress/blob/develop/LICENSE.md">licence</a> costs (MIT): <a href="https://github.com/cypress-io/cypress">open source</a></li>
                     <li>great community (9000 stars, 78 contributors)</li>
                     <li>extremely robust: no need for waits, scrollIntoView, check for visbility, existence... </li>
+                    <li>is close to the browser so it can do things like DOM API stubbing, which selenium can not do</li>
                     <li>very fast test execution (in headless mode)</li>
+                    <li>easy to write tests for frontend developers</li>
                 </ul>
             </section>
 
