--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <section>
                 <h2>Advantages of Selenium</h2>
                 <ul>
-                    <li>Selenium is able to test non browser based apps (only with TAF)</li>
+                    <li>TAF (using Selenium for web testing) is able to test non browser based apps</li>
                     <li>Supports diffrent browsers (Internet Explorer, Chrome, Firefox, Opera, Safari, etc.)</li>
                     <li>long history, well established, well known</li>
                     <li>supports many different programming languages</li>
