--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <section>
                 <h2>important differences</h2>
                 <ul>
-                    <li>selenium operates outside of the browser with remote commands in JSON over http (webdriver protccol) -> delay</li>
+                    <li>selenium operates outside of the browser with remote commands in JSON over http (webdriver protocol) -> delay</li>
                     <li>cypress runs inside the browser -> has therefore access to the web app itself and can e.g. stub network requests</li>
                 </ul>
             </section>
